--- a/API/appsettings.Development.json
+++ b/API/appsettings.Development.json
@@ -6,8 +6,8 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "ConnectionStrings":{
+  "ConnectionStrings": {
     "DefaultConnection": "Data source=skinet.db"
   },
-  "ApiUrl": "http://localhost:5001/"
+  "ApiUrl": "https://localhost:5001/"
 }
