--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -14,8 +14,10 @@
     "experimentalDecorators": true,
     "moduleResolution": "node",
     "importHelpers": true,
-    "target": "es2017",
-    "module": "es2020",
+    /* "target": "es2017",
+    "module": "es2020", */
+    "target": "es2015",
+    "module": "esnext",
     "lib": [
       "es2018",
       "dom"
