--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -25,8 +25,9 @@
   },
   "angularCompilerOptions": {
     "enableI18nLegacyMessageIdFormat": false,
-    "strictInjectionParameters": true,
-    "strictInputAccessModifiers": true,
+    //"strictInjectionParameters": true,
+    //"strictInputAccessModifiers": true,
+    "strictDomEventTypes": false,
     "strictTemplates": true
   }
 }
