--- a/API/appsettings.Development.json
+++ b/API/appsettings.Development.json
@@ -9,5 +9,5 @@
   "ConnectionStrings": {
     "DefaultConnection": "Data source=skinet.db"
   },
-  "ApiUrl": "http://localhost:5000"
+  "ApiUrl": "http://localhost:5000/"
 }
