--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -28,6 +28,7 @@
     //"strictInjectionParameters": true,
     //"strictInputAccessModifiers": true,
     "strictDomEventTypes": false,
-    "strictTemplates": true
+    "strictTemplates": true,
+    "strictPropertyInitialization": false
   }
 }
